--- a/public/css/my_style.css
+++ b/public/css/my_style.css
@@ -7,6 +7,7 @@
 .absolute{position: absolute!important;}
 
 .mn{margin: 0px!important;}
+.m-small{margin: 5px!important;}
 .mb-small{margin-bottom: 5px!important;}
 .mt-small{margin-top: 5px!important;}
 .mr-small{margin-right: 5px!important;}
@@ -17,6 +18,7 @@
 .ml{margin-left: 10px!important;}
 
 .pn{padding: 0px!important;}
+.p-small{padding: 5px!important;}
 .pb-small{padding-bottom: 5px!important;}
 .pt-small{padding-top: 5px!important;}
 .pr-small{padding-right: 5px!important;}
@@ -31,6 +33,14 @@
 .c-default{cursor:default;}
 .c-pointer{cursor:pointer;}
 
+.muralCriticidadeItem{
+  height: 36px;
+  width: 75px;
+  cursor: pointer;
+  display: inline-block;
+  transition-duration: 0.5s;
+}
+
 .postitColorItem{
   height: 36px;
   width: 36px;
@@ -39,6 +49,7 @@
   transition-duration: 0.5s;
 }
 
+.muralCriticidadeItem:hover,
 .postitColorItem:hover{
   box-shadow: 1px 1px 4px black;
 }
